--- a/index.html
+++ b/index.html
@@ -3,169 +3,118 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Essentials Shop</title>
+    <title>Shop Website</title>
     <style>
-        /* General Styles */
         body {
             margin: 0;
             font-family: Arial, sans-serif;
-            background: linear-gradient(to bottom, #000000, #990000);
+            background-color: #000;
             color: #fff;
         }
-        h1, h2, h3 {
-            color: #ff0000;
-        }
-        a {
-            color: #ff6666;
-            text-decoration: none;
-        }
-        a:hover {
-            color: #ffcccc;
-        }
 
-        /* Header */
         header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 20px;
-            background-color: #990000;
-            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
-        }
-        header .logo {
-            font-size: 24px;
-            font-weight: bold;
-        }
-        nav ul {
-            list-style: none;
-            display: flex;
-            gap: 15px;
-        }
-        nav ul li {
-            display: inline;
-        }
-
-        /* Main Content */
-        .hero {
+            background-color: #b00000;
+            padding: 1rem;
             text-align: center;
-            padding: 50px 20px;
-            background: rgba(255, 255, 255, 0.1);
-            margin: 20px;
-            border-radius: 10px;
         }
 
-        .products {
+        header h1 {
+            margin: 0;
+            font-size: 2rem;
+        }
+
+        nav {
             display: flex;
-            flex-wrap: wrap;
-            gap: 20px;
             justify-content: center;
-            padding: 20px;
-        }
-        .product {
-            background: #222;
-            border-radius: 10px;
-            padding: 15px;
-            width: 200px;
-            text-align: center;
-            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.3);
-        }
-        .product img {
-            max-width: 100%;
-            border-radius: 10px;
-        }
-        .product h3 {
-            margin: 10px 0;
+            background-color: #222;
+            padding: 0.5rem 0;
         }
 
-        /* Contact Section */
-        .contact {
-            padding: 20px;
-            background: rgba(255, 255, 255, 0.1);
-            margin: 20px;
-            border-radius: 10px;
-        }
-        .contact form {
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-        }
-        .contact input, .contact textarea {
-            padding: 10px;
-            border: none;
-            border-radius: 5px;
-        }
-        .contact button {
-            padding: 10px;
-            background: #ff0000;
+        nav a {
             color: #fff;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-        .contact button:hover {
-            background: #cc0000;
+            text-decoration: none;
+            margin: 0 1rem;
+            font-size: 1.2rem;
+            transition: color 0.3s ease;
         }
 
-        /* Footer */
+        nav a:hover {
+            color: #b00000;
+        }
+
+        .container {
+            padding: 2rem;
+            text-align: center;
+        }
+
+        .product {
+            display: inline-block;
+            background-color: #333;
+            color: #fff;
+            margin: 1rem;
+            padding: 1rem;
+            border-radius: 5px;
+            width: 200px;
+        }
+
+        .product img {
+            width: 100%;
+            border-radius: 5px;
+        }
+
+        .product h2 {
+            font-size: 1.2rem;
+        }
+
         footer {
             text-align: center;
-            padding: 10px;
-            background-color: #000;
-            border-top: 2px solid #990000;
+            background-color: #222;
+            color: #fff;
+            padding: 1rem;
+            position: relative;
+            bottom: 0;
+            width: 100%;
         }
     </style>
 </head>
 <body>
-    <!-- Header -->
     <header>
-        <div class="logo">Home Essentials</div>
-        <nav>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#products">Products</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
+        <h1>Welcome to Our Shop</h1>
     </header>
-
-    <!-- Main Content -->
-    <div class="hero" id="home">
-        <h1>Welcome to Home Essentials</h1>
-        <p>Your one-stop shop for premium home products.</p>
+    <nav>
+        <a href="#home">Home</a>
+        <a href="#products">Products</a>
+        <a href="#contact">Contact</a>
+    </nav>
+    <div class="container" id="home">
+        <h2>Home</h2>
+        <p>Welcome to our shop. Explore our wide range of products below.</p>
     </div>
-
-    <section class="products" id="products">
-        <h2>Our Products</h2>
+    <div class="container" id="products">
+        <h2>Products</h2>
         <div class="product">
             <img src="https://via.placeholder.com/200" alt="Product 1">
-            <h3>Product 1</h3>
-            <p>$20</p>
+            <h2>Product 1</h2>
+            <p>Quantity: 10</p>
         </div>
         <div class="product">
             <img src="https://via.placeholder.com/200" alt="Product 2">
-            <h3>Product 2</h3>
-            <p>$30</p>
+            <h2>Product 2</h2>
+            <p>Quantity: 5</p>
         </div>
         <div class="product">
             <img src="https://via.placeholder.com/200" alt="Product 3">
-            <h3>Product 3</h3>
-            <p>$25</p>
+            <h2>Product 3</h2>
+            <p>Quantity: 20</p>
         </div>
-    </section>
-
-    <section class="contact" id="contact">
-        <h2>Contact Us</h2>
-        <form action="mailto:your-email@example.com" method="post" enctype="text/plain">
-            <input type="text" name="name" placeholder="Your Name" required>
-            <input type="email" name="email" placeholder="Your Email" required>
-            <textarea name="message" rows="5" placeholder="Your Message"></textarea>
-            <button type="submit">Send Message</button>
-        </form>
-    </section>
-
-    <!-- Footer -->
+    </div>
+    <div class="container" id="contact">
+        <h2>Contact</h2>
+        <p>Email: shop@example.com</p>
+        <p>Phone: +123 456 7890</p>
+    </div>
     <footer>
-        <p>&copy; 2024 Home Essentials. All rights reserved.</p>
+        <p>&copy; 2024 Shop Website. All rights reserved.</p>
     </footer>
 </body>
 </html>
