--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to Our Shop</h1>
+        <h1>MUNEER STORES</h1>
     </header>
     <nav>
         <a href="#home">Home</a>
@@ -93,6 +93,66 @@
     <div class="container" id="products">
         <h2>Products</h2>
         <div class="product">
+            <img src="https://via.placeholder.com/200" alt="Product 1">
+            <h2>Product 1</h2>
+            <p>Quantity: 10</p>
+        </div>
+        <div class="product">
+            <img src="https://via.placeholder.com/200" alt="Product 2">
+            <h2>Product 2</h2>
+            <p>Quantity: 5</p>
+        </div>
+        <div class="product">
+            <img src="https://via.placeholder.com/200" alt="Product 3">
+            <h2>Product 3</h2>
+            <p>Quantity: 20</p>
+        </div>
+         <div class="product">
+            <img src="https://via.placeholder.com/200" alt="Product 1">
+            <h2>Product 1</h2>
+            <p>Quantity: 10</p>
+        </div>
+        <div class="product">
+            <img src="https://via.placeholder.com/200" alt="Product 2">
+            <h2>Product 2</h2>
+            <p>Quantity: 5</p>
+        </div>
+        <div class="product">
+            <img src="https://via.placeholder.com/200" alt="Product 3">
+            <h2>Product 3</h2>
+            <p>Quantity: 20</p>
+        </div>
+         <div class="product">
+            <img src="https://via.placeholder.com/200" alt="Product 1">
+            <h2>Product 1</h2>
+            <p>Quantity: 10</p>
+        </div>
+        <div class="product">
+            <img src="https://via.placeholder.com/200" alt="Product 2">
+            <h2>Product 2</h2>
+            <p>Quantity: 5</p>
+        </div>
+        <div class="product">
+            <img src="https://via.placeholder.com/200" alt="Product 3">
+            <h2>Product 3</h2>
+            <p>Quantity: 20</p>
+        </div>
+         <div class="product">
+            <img src="https://via.placeholder.com/200" alt="Product 1">
+            <h2>Product 1</h2>
+            <p>Quantity: 10</p>
+        </div>
+        <div class="product">
+            <img src="https://via.placeholder.com/200" alt="Product 2">
+            <h2>Product 2</h2>
+            <p>Quantity: 5</p>
+        </div>
+        <div class="product">
+            <img src="https://via.placeholder.com/200" alt="Product 3">
+            <h2>Product 3</h2>
+            <p>Quantity: 20</p>
+        </div>
+         <div class="product">
             <img src="https://via.placeholder.com/200" alt="Product 1">
             <h2>Product 1</h2>
             <p>Quantity: 10</p>
