--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
 </head>
 <body>
     <header>
-        <h1>MUNEER STORES</h1>
+        <h1>MUNEER STORES
+        Beside ANNA CANTEEN bustand,Atmakur</h1>
     </header>
     <nav>
         <a href="#home">Home</a>
@@ -170,8 +171,8 @@
     </div>
     <div class="container" id="contact">
         <h2>Contact</h2>
-        <p>Email: shop@example.com</p>
-        <p>Phone: +123 456 7890</p>
+        <p>Email: muneersyed2004@gmail.com</p>
+        <p>Phone: 9989320259</p>
     </div>
     <footer>
         <p>&copy; 2024 Shop Website. All rights reserved.</p>
