--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
 </head>
 <body>
     <header>
-        <h1>MUNEER STORES
-        Beside ANNA CANTEEN bustand,Atmakur</h1>
+        <h1>MUNEER STORES</h1>
+        <h4>Beside ANNA CANTEEN bustand,Atmakur</h4>
     </header>
     <nav>
         <a href="#home">Home</a>
