--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 <body>
     <header>
         <h1>MUNEER STORES</h1>
-        <h4>Beside ANNA CANTEEN bustand,Atmakur</h4>
+        <h4>BESIDE ANNA CANTEEN,RTC-BUSTAND,ATMAKUR</h4>
     </header>
     <nav>
         <a href="#home">Home</a>
