--- a/index.html
+++ b/index.html
@@ -93,81 +93,127 @@
     </div>
     <div class="container" id="products">
         <h2>Products</h2>
-        <div class="product">
+         <div class="product">
             <img src="https://via.placeholder.com/200" alt="Product 1">
             <h2>Product 1</h2>
+            <h2>Price: 11</h2>
             <p>Quantity: 10</p>
-        </div>
-        <div class="product">
-            <img src="https://via.placeholder.com/200" alt="Product 2">
-            <h2>Product 2</h2>
-            <p>Quantity: 5</p>
-        </div>
-        <div class="product">
-            <img src="https://via.placeholder.com/200" alt="Product 3">
-            <h2>Product 3</h2>
-            <p>Quantity: 20</p>
         </div>
          <div class="product">
             <img src="https://via.placeholder.com/200" alt="Product 1">
             <h2>Product 1</h2>
+            <h2>Price: 11</h2>
             <p>Quantity: 10</p>
-        </div>
-        <div class="product">
-            <img src="https://via.placeholder.com/200" alt="Product 2">
-            <h2>Product 2</h2>
-            <p>Quantity: 5</p>
-        </div>
-        <div class="product">
-            <img src="https://via.placeholder.com/200" alt="Product 3">
-            <h2>Product 3</h2>
-            <p>Quantity: 20</p>
         </div>
          <div class="product">
             <img src="https://via.placeholder.com/200" alt="Product 1">
             <h2>Product 1</h2>
+            <h2>Price: 11</h2>
             <p>Quantity: 10</p>
-        </div>
-        <div class="product">
-            <img src="https://via.placeholder.com/200" alt="Product 2">
-            <h2>Product 2</h2>
-            <p>Quantity: 5</p>
-        </div>
-        <div class="product">
-            <img src="https://via.placeholder.com/200" alt="Product 3">
-            <h2>Product 3</h2>
-            <p>Quantity: 20</p>
         </div>
          <div class="product">
             <img src="https://via.placeholder.com/200" alt="Product 1">
             <h2>Product 1</h2>
+            <h2>Price: 11</h2>
             <p>Quantity: 10</p>
-        </div>
-        <div class="product">
-            <img src="https://via.placeholder.com/200" alt="Product 2">
-            <h2>Product 2</h2>
-            <p>Quantity: 5</p>
-        </div>
-        <div class="product">
-            <img src="https://via.placeholder.com/200" alt="Product 3">
-            <h2>Product 3</h2>
-            <p>Quantity: 20</p>
         </div>
          <div class="product">
             <img src="https://via.placeholder.com/200" alt="Product 1">
             <h2>Product 1</h2>
+            <h2>Price: 11</h2>
             <p>Quantity: 10</p>
         </div>
-        <div class="product">
-            <img src="https://via.placeholder.com/200" alt="Product 2">
-            <h2>Product 2</h2>
-            <p>Quantity: 5</p>
+         <div class="product">
+            <img src="https://via.placeholder.com/200" alt="Product 1">
+            <h2>Product 1</h2>
+            <h2>Price: 11</h2>
+            <p>Quantity: 10</p>
         </div>
-        <div class="product">
-            <img src="https://via.placeholder.com/200" alt="Product 3">
-            <h2>Product 3</h2>
-            <p>Quantity: 20</p>
+         <div class="product">
+            <img src="https://via.placeholder.com/200" alt="Product 1">
+            <h2>Product 1</h2>
+            <h2>Price: 11</h2>
+            <p>Quantity: 10</p>
         </div>
+         <div class="product">
+            <img src="https://via.placeholder.com/200" alt="Product 1">
+            <h2>Product 1</h2>
+            <h2>Price: 11</h2>
+            <p>Quantity: 10</p>
+        </div>
+         <div class="product">
+            <img src="https://via.placeholder.com/200" alt="Product 1">
+            <h2>Product 1</h2>
+            <h2>Price: 11</h2>
+            <p>Quantity: 10</p>
+        </div>
+         <div class="product">
+            <img src="https://via.placeholder.com/200" alt="Product 1">
+            <h2>Product 1</h2>
+            <h2>Price: 11</h2>
+            <p>Quantity: 10</p>
+        </div>
+         <div class="product">
+            <img src="https://via.placeholder.com/200" alt="Product 1">
+            <h2>Product 1</h2>
+            <h2>Price: 11</h2>
+            <p>Quantity: 10</p>
+        </div>
+         <div class="product">
+            <img src="https://via.placeholder.com/200" alt="Product 1">
+            <h2>Product 1</h2>
+            <h2>Price: 11</h2>
+            <p>Quantity: 10</p>
+        </div> <div class="product">
+            <img src="https://via.placeholder.com/200" alt="Product 1">
+            <h2>Product 1</h2>
+            <h2>Price: 11</h2>
+             <div class="product">
+            <img src="https://via.placeholder.com/200" alt="Product 1">
+            <h2>Product 1</h2>
+            <h2>Price: 11</h2>
+            <p>Quantity: 10</p>
+        </div>
+             <div class="product">
+            <img src="https://via.placeholder.com/200" alt="Product 1">
+            <h2>Product 1</h2>
+            <h2>Price: 11</h2>
+            <p>Quantity: 10</p>
+        </div>
+            <p>Quantity: 10</p>
+        </div>
+         <div class="product">
+            <img src="https://via.placeholder.com/200" alt="Product 1">
+            <h2>Product 1</h2>
+            <h2>Price: 11</h2>
+            <p>Quantity: 10</p>
+        </div>
+         <div class="product">
+            <img src="https://via.placeholder.com/200" alt="Product 1">
+            <h2>Product 1</h2>
+            <h2>Price: 11</h2>
+            <p>Quantity: 10</p>
+        </div>
+         <div class="product">
+            <img src="https://via.placeholder.com/200" alt="Product 1">
+            <h2>Product 1</h2>
+            <h2>Price: 11</h2>
+            <p>Quantity: 10</p>
+        </div>
+         <div class="product">
+            <img src="https://via.placeholder.com/200" alt="Product 1">
+            <h2>Product 1</h2>
+            <h2>Price: 11</h2>
+            <p>Quantity: 10</p>
+        </div>
+         <div class="product">
+            <img src="https://via.placeholder.com/200" alt="Product 1">
+            <h2>Product 1</h2>
+            <h2>Price: 11</h2>
+            <p>Quantity: 10</p>
+        </div>
+        
+                   
     </div>
     <div class="container" id="contact">
         <h2>Contact</h2>
