--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <div class="container" id="products">
         <h2>Products</h2>
          <div class="product">
-            <img src="C:\Users\Lenovo\Saved Games\Documents\csph6" alt="Product 1">
+            <img src="C:\Users\Lenovo\Saved Games\Documents\csph6.jpg" alt="Product 1">
             <h2>Product 1</h2>
             <h2>Price: 11</h2>
             <p>Quantity: 10</p>
