--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <p>Quantity: 10</p>
         </div>
          <div class="product">
-            <img src="https://via.placeholder.com/200" alt="Product 1">
+            <img src="download.jpeg" alt="Product 1">
             <h2>Product 1</h2>
             <h2>Price: 11</h2>
             <p>Quantity: 10</p>
