--- a/index.html
+++ b/index.html
@@ -269,10 +269,12 @@
                 transform: scale(1);
                 box-shadow: 0 0 0 0 rgba(255, 215, 0, 0.7);
             }
+
             50% {
                 transform: scale(1.1);
                 box-shadow: 0 0 0 8px rgba(255, 215, 0, 0.3);
             }
+
             100% {
                 transform: scale(1);
                 box-shadow: 0 0 0 0 rgba(255, 215, 0, 0);
@@ -533,7 +535,8 @@
                     <a href="#home" class="nav-link navButton px-3 py-2 text-sm font-medium">Home</a>
                     <a href="#services" class="nav-link navButton px-3 py-2 text-sm font-medium">Services</a>
                     <a href="#process" class="nav-link navButton px-3 py-2 text-sm font-medium">Process</a>
-                    <a href="#contact" class="btn-primary navButton px-6 py-2 rounded-md text-sm font-medium">Reserve Slot</a>
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSem1JnAIYrni8lxpGLtCZwr0ydi1L00bCDLYe4NJ1JHOhwfhQ/viewform?usp=header" target="_blank" class="btn-primary navButton px-6 py-2 rounded-md text-sm font-medium">Reserve
+                        Slot</a>
                 </div>
                 <div class="md:hidden flex items-center">
                     <button class="mobile-menu-button focus:outline-none">
@@ -549,7 +552,8 @@
                 <a href="#home" class="nav-link navButton">Home</a>
                 <a href="#services" class="nav-link navButton">Services</a>
                 <a href="#process" class="nav-link navButton">Process</a>
-                <a href="#contact" class="btn-primary navButton px-6 py-2 rounded-md text-sm font-medium">Reserve Slot</a>
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSem1JnAIYrni8lxpGLtCZwr0ydi1L00bCDLYe4NJ1JHOhwfhQ/viewform?usp=header" target="_blank" class="btn-primary navButton px-6 py-2 rounded-md text-sm font-medium">Reserve
+                    Slot</a>
             </div>
         </div>
     </nav>
@@ -575,7 +579,7 @@
                         websites with stunning design, responsiveness, and functionality. A small service charge applies
                         for our expertise. 🕒 Slots are limited and allotted on a first-come, first-serve basis.</p>
                     <div class="flex flex-wrap gap-4">
-                        <a href="#contact" class="btn-primary px-6 py-3 rounded-md font-medium pulse-button">Book Your
+                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSem1JnAIYrni8lxpGLtCZwr0ydi1L00bCDLYe4NJ1JHOhwfhQ/viewform?usp=header" target="_blank" class="btn-primary px-6 py-3 rounded-md font-medium pulse-button">Book Your
                             Slot
                             Now</a>
                         <a href="#services"
@@ -707,7 +711,7 @@
                         <div class="text-center">
                             <span class="text-3xl font-bold text-white">₹1,999</span>
                             <span class="text-sm text-gray-400 block">One-time payment</span>
-                            <a href="#contact"
+                            <a href="https://docs.google.com/forms/d/e/1FAIpQLSem1JnAIYrni8lxpGLtCZwr0ydi1L00bCDLYe4NJ1JHOhwfhQ/viewform?usp=header" target="_blank"
                                 class="btn-primary px-6 py-2 rounded-md text-sm font-medium inline-block mt-4">Get
                                 Started</a>
                         </div>
@@ -790,7 +794,7 @@
                         <div class="text-center">
                             <span class="text-3xl font-bold text-white">₹2,999</span>
                             <span class="text-sm text-gray-400 block">One-time payment</span>
-                            <a href="#contact"
+                            <a href="https://docs.google.com/forms/d/e/1FAIpQLSem1JnAIYrni8lxpGLtCZwr0ydi1L00bCDLYe4NJ1JHOhwfhQ/viewform?usp=header" target="_blank"
                                 class="btn-primary px-6 py-2 rounded-md text-sm font-medium inline-block mt-4">Get
                                 Started</a>
                         </div>
@@ -801,7 +805,7 @@
             <div class="mt-16 text-center">
                 <p class="text-gray-300 mb-6">Need something custom? We can tailor our services to your exact
                     requirements.</p>
-                <a href="#contact"
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSem1JnAIYrni8lxpGLtCZwr0ydi1L00bCDLYe4NJ1JHOhwfhQ/viewform?usp=header" target="_blank"
                     class="bg-transparent border-2 border-gold-400 text-gold-400 px-6 py-2 rounded-md font-medium custom-package-btn inline-flex items-center">
                     <svg class="w-5 h-5 mr-2 icon-spin" fill="none" stroke="currentColor" viewBox="0 0 24 24"
                         xmlns="http://www.w3.org/2000/svg">
@@ -903,7 +907,7 @@
             </div>
 
             <div class="mt-16 text-center">
-                <a href="#contact"
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSem1JnAIYrni8lxpGLtCZwr0ydi1L00bCDLYe4NJ1JHOhwfhQ/viewform?usp=header" target="_blank"
                     class="btn-primary px-8 py-3 rounded-md text-lg font-medium inline-flex items-center">
                     Start Now
                     <svg class="w-5 h-5 ml-2 icon-spin" fill="none" stroke="currentColor" viewBox="0 0 24 24"
@@ -920,7 +924,8 @@
     <section id="contact" class="py-8 bg-black relative">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="text-center py-8">
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLSem1JnAIYrni8lxpGLtCZwr0ydi1L00bCDLYe4NJ1JHOhwfhQ/viewform?usp=header" class="btn-primary navButton px-6 py-3 rounded-md font-medium">Submit Details Now</a>
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSem1JnAIYrni8lxpGLtCZwr0ydi1L00bCDLYe4NJ1JHOhwfhQ/viewform?usp=header" target="_blank"
+                    class="btn-primary navButton px-6 py-3 rounded-md font-medium">Submit Details Now</a>
             </div>
         </div>
     </section>
@@ -955,8 +960,10 @@
                 this.classList.add('pulse-active');
                 setTimeout(() => {
                     this.classList.remove('pulse-active');
-                    if (href !== '#') {
+                    if (href.startsWith('#')) {
                         document.querySelector(href).scrollIntoView({ behavior: 'smooth' });
+                    } else {
+                        window.open(href, '_blank');
                     }
                 }, 300); // Match duration of clickPulse animation
             });
@@ -964,4 +971,4 @@
     </script>
 </body>
 
-</html>
+    </html>
