--- a/index.html
+++ b/index.html
@@ -535,7 +535,8 @@
                     <a href="#home" class="nav-link navButton px-3 py-2 text-sm font-medium">Home</a>
                     <a href="#services" class="nav-link navButton px-3 py-2 text-sm font-medium">Services</a>
                     <a href="#process" class="nav-link navButton px-3 py-2 text-sm font-medium">Process</a>
-                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSem1JnAIYrni8lxpGLtCZwr0ydi1L00bCDLYe4NJ1JHOhwfhQ/viewform?usp=header" target="_blank" class="btn-primary navButton px-6 py-2 rounded-md text-sm font-medium">Reserve
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSem1JnAIYrni8lxpGLtCZwr0ydi1L00bCDLYe4NJ1JHOhwfhQ/viewform?usp=header"
+                        target="_blank" class="btn-primary navButton px-6 py-2 rounded-md text-sm font-medium">Reserve
                         Slot</a>
                 </div>
                 <div class="md:hidden flex items-center">
@@ -552,7 +553,8 @@
                 <a href="#home" class="nav-link navButton">Home</a>
                 <a href="#services" class="nav-link navButton">Services</a>
                 <a href="#process" class="nav-link navButton">Process</a>
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLSem1JnAIYrni8lxpGLtCZwr0ydi1L00bCDLYe4NJ1JHOhwfhQ/viewform?usp=header" target="_blank" class="btn-primary navButton px-6 py-2 rounded-md text-sm font-medium">Reserve
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSem1JnAIYrni8lxpGLtCZwr0ydi1L00bCDLYe4NJ1JHOhwfhQ/viewform?usp=header"
+                    target="_blank" class="btn-primary navButton px-6 py-2 rounded-md text-sm font-medium">Reserve
                     Slot</a>
             </div>
         </div>
@@ -579,7 +581,8 @@
                         websites with stunning design, responsiveness, and functionality. A small service charge applies
                         for our expertise. 🕒 Slots are limited and allotted on a first-come, first-serve basis.</p>
                     <div class="flex flex-wrap gap-4">
-                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSem1JnAIYrni8lxpGLtCZwr0ydi1L00bCDLYe4NJ1JHOhwfhQ/viewform?usp=header" target="_blank" class="btn-primary px-6 py-3 rounded-md font-medium pulse-button">Book Your
+                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSem1JnAIYrni8lxpGLtCZwr0ydi1L00bCDLYe4NJ1JHOhwfhQ/viewform?usp=header"
+                            target="_blank" class="btn-primary px-6 py-3 rounded-md font-medium pulse-button">Book Your
                             Slot
                             Now</a>
                         <a href="#services"
@@ -711,7 +714,8 @@
                         <div class="text-center">
                             <span class="text-3xl font-bold text-white">₹1,999</span>
                             <span class="text-sm text-gray-400 block">One-time payment</span>
-                            <a href="https://docs.google.com/forms/d/e/1FAIpQLSem1JnAIYrni8lxpGLtCZwr0ydi1L00bCDLYe4NJ1JHOhwfhQ/viewform?usp=header" target="_blank"
+                            <a href="https://docs.google.com/forms/d/e/1FAIpQLSem1JnAIYrni8lxpGLtCZwr0ydi1L00bCDLYe4NJ1JHOhwfhQ/viewform?usp=header"
+                                target="_blank"
                                 class="btn-primary px-6 py-2 rounded-md text-sm font-medium inline-block mt-4">Get
                                 Started</a>
                         </div>
@@ -794,7 +798,8 @@
                         <div class="text-center">
                             <span class="text-3xl font-bold text-white">₹2,999</span>
                             <span class="text-sm text-gray-400 block">One-time payment</span>
-                            <a href="https://docs.google.com/forms/d/e/1FAIpQLSem1JnAIYrni8lxpGLtCZwr0ydi1L00bCDLYe4NJ1JHOhwfhQ/viewform?usp=header" target="_blank"
+                            <a href="https://docs.google.com/forms/d/e/1FAIpQLSem1JnAIYrni8lxpGLtCZwr0ydi1L00bCDLYe4NJ1JHOhwfhQ/viewform?usp=header"
+                                target="_blank"
                                 class="btn-primary px-6 py-2 rounded-md text-sm font-medium inline-block mt-4">Get
                                 Started</a>
                         </div>
@@ -805,7 +810,8 @@
             <div class="mt-16 text-center">
                 <p class="text-gray-300 mb-6">Need something custom? We can tailor our services to your exact
                     requirements.</p>
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLSem1JnAIYrni8lxpGLtCZwr0ydi1L00bCDLYe4NJ1JHOhwfhQ/viewform?usp=header" target="_blank"
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSem1JnAIYrni8lxpGLtCZwr0ydi1L00bCDLYe4NJ1JHOhwfhQ/viewform?usp=header"
+                    target="_blank"
                     class="bg-transparent border-2 border-gold-400 text-gold-400 px-6 py-2 rounded-md font-medium custom-package-btn inline-flex items-center">
                     <svg class="w-5 h-5 mr-2 icon-spin" fill="none" stroke="currentColor" viewBox="0 0 24 24"
                         xmlns="http://www.w3.org/2000/svg">
@@ -907,7 +913,8 @@
             </div>
 
             <div class="mt-16 text-center">
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLSem1JnAIYrni8lxpGLtCZwr0ydi1L00bCDLYe4NJ1JHOhwfhQ/viewform?usp=header" target="_blank"
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSem1JnAIYrni8lxpGLtCZwr0ydi1L00bCDLYe4NJ1JHOhwfhQ/viewform?usp=header"
+                    target="_blank"
                     class="btn-primary px-8 py-3 rounded-md text-lg font-medium inline-flex items-center">
                     Start Now
                     <svg class="w-5 h-5 ml-2 icon-spin" fill="none" stroke="currentColor" viewBox="0 0 24 24"
@@ -924,8 +931,9 @@
     <section id="contact" class="py-8 bg-black relative">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="text-center py-8">
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLSem1JnAIYrni8lxpGLtCZwr0ydi1L00bCDLYe4NJ1JHOhwfhQ/viewform?usp=header" target="_blank"
-                    class="btn-primary navButton px-6 py-3 rounded-md font-medium">Submit Details Now</a>
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSem1JnAIYrni8lxpGLtCZwr0ydi1L00bCDLYe4NJ1JHOhwfhQ/viewform?usp=header"
+                    target="_blank" class="btn-primary navButton px-6 py-3 rounded-md font-medium">Submit Details
+                    Now</a>
             </div>
         </div>
     </section>
@@ -971,4 +979,4 @@
     </script>
 </body>
 
-    </html>
+</html>
